# wasipc

./: CMakeLists.txt  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
benchmark/: bench_async_write.py  wasipc_bench.py  wasipc_bench_llama70b.py
examples/.ipynb_checkpoints/: owner_demo-checkpoint.cpp  requester_demo-checkpoint.cpp
include/wasipc/: wasipc.h
pytests/: conftest.py  test_errors.py  test_event_ipc.py  test_register_open_close.py  test_writev_async.py
pytests/.ipynb_checkpoints/: test_readv_async-checkpoint.py
src/: pywasipc.cpp  wasipc.cpp
src/.ipynb_checkpoints/: pywasipc-checkpoint.cpp  wasipc-checkpoint.cpp
