[build-system]
requires = [
  "scikit-build-core>=0.7.0",
  "pybind11>=2.11",
  "cmake>=3.26",
  "ninja"
]
build-backend = "scikit_build_core.build"

[project]
name = "pywasipc"
version = "0.1.0"
description = "One-sided cross-GPU reads via CUDA IPC + P2P (WAS IPC bindings)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Your Team" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: C++",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux"
]

[tool.scikit-build]
cmake.build-type = "Release"
ninja.make-fallback = true
wheel.packages = []
